--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "consolidate": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "ico": "^0.3.3"
